# directdns.net

./: LICENSE  README.md
backend/: .env.example  Cargo.toml  diesel.toml
backend/migrations/2024-12-24-143000_create_sessions/: up.sql
backend/src/: db.rs  main.rs  proxy.rs
backend/src/db/: models.rs  schema.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/pages/: ProxySessions.tsx
