[package]
name = "directdns"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["server", "client", "http1"] }
hyper-tls = "0.5"
diesel = { version = "2.2", features = ["mysql", "chrono", "r2d2"] }
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
